# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview', 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter.1
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$autocapture', 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$autocapture']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview'
                  AND (has(['Chrome'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))), 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties.1
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview'
                  AND (has(['Firefox'], replaceRegexpAll(JSONExtractRaw(properties, '$browser'), '^"|"$', ''))), 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties_materialized
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview'
                  AND (has(['Chrome'], "mat_$browser")), 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_event_filter_with_properties_materialized.1
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview'
                  AND (has(['Firefox'], "mat_$browser")), 1, 0) as matches_0
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_multiple_event_filters
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0 ,
            sum(matches_1) as matches_1
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview', 1, 0) as matches_0 ,
               if(event = 'new-event', 1, 0) as matches_1
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview', 'new-event']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0
     AND matches_1 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
# name: TestClickhouseSessionRecordingsListFromSessionReplay.test_multiple_event_filters.1
  '
  WITH events_session_ids AS
    (SELECT session_id ,
            sum(matches_0) as matches_0 ,
            sum(matches_1) as matches_1
     FROM
       (SELECT `$session_id` as session_id ,
               if(event = '$pageview', 1, 0) as matches_0 ,
               if(event = 'new-event2', 1, 0) as matches_1
        FROM events PREWHERE team_id = 2
        AND timestamp >= '2021-01-13 12:00:00'
        AND timestamp <= '2021-01-22 08:00:00'
        AND event IN ['$pageview', 'new-event2']
        and notEmpty(session_id)) AS inner_event_q
     GROUP BY session_id
     HAVING 1=1
     AND matches_0 > 0
     AND matches_1 > 0)
  SELECT session_id,
         any(team_id),
         any(distinct_id),
         min(first_timestamp) as start_time,
         max(last_timestamp) as end_time,
         dateDiff('SECOND', min(first_timestamp), max(last_timestamp)) as duration,
         sum(click_count),
         sum(keypress_count),
         sum(mouse_activity_count),
         round((sum(active_milliseconds)/1000)/duration, 2) as active_time
  FROM session_replay_events PREWHERE team_id = 2
  AND first_timestamp >= '2021-01-14 00:00:00'
  AND last_timestamp <= '2021-01-21 20:00:00'
  AND session_id in
    (select session_id
     from events_session_ids)
  GROUP BY session_id
  ORDER BY start_time DESC
  '
---
